--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,18 @@
         "guzzlehttp/guzzle": "^6.3",
         "barryvdh/laravel-cors": "^0.11.2"
     },
+    "require-dev": {
+        "orchestra/testbench": "3.6.*",
+        "phpunit/phpunit": "~7.0"
+    },
     "autoload": {
         "psr-4": {
             "Zakhariy\\MobidelLaravel\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "MobidelTests\\": "tests/"
         }
     },
     "extra": {
